--- a/index.html
+++ b/index.html
@@ -3,130 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>𝑩𝑶𝑻 𝑺𝒐𝒏𝒈 𝑱𝒊𝒏 𝑾𝒐𝒐 | جيش الظلال</title>
+    <title>بوابة 𝑺𝒐𝒏𝒈 𝑱𝒊𝒏 𝑾𝒐𝒐 المتكاملة</title>
+    <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        :root {
-            --primary-purple: #a020f0;
-            --dark-bg: #050505;
-            --text-color: #e0e0e0;
-        }
+        :root { --gold: #d4af37; --shadow-purple: #8a2be2; --bg: #050505; }
+        body { background: var(--bg); color: #fff; font-family: 'Cairo', sans-serif; margin: 0; overflow-x: hidden; }
+        
+        /* تأثير الخلفية المتحركة */
+        .stars { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background: radial-gradient(circle, #1a0033 0%, #050505 100%); }
 
-        body {
-            background-color: var(--dark-bg);
-            color: var(--text-color);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+        header { padding: 40px; text-align: center; border-bottom: 2px solid var(--gold); background: rgba(0,0,0,0.8); }
+        .logo { width: 150px; border-radius: 50%; border: 3px solid var(--gold); box-shadow: 0 0 20px var(--shadow-purple); }
 
-        .header {
-            width: 100%;
-            padding: 20px;
-            text-align: center;
-            background: linear-gradient(to bottom, #1a0033, var(--dark-bg));
-        }
+        .nav-bar { display: flex; justify-content: center; gap: 20px; background: #111; padding: 15px; position: sticky; top: 0; z-index: 100; }
+        .nav-bar a { color: var(--gold); text-decoration: none; font-weight: bold; font-size: 1.1rem; }
 
-        .hero-img {
-            width: 90%;
-            max-width: 500px;
-            border-radius: 20px;
-            border: 3px solid var(--primary-purple);
-            box-shadow: 0 0 30px var(--primary-purple);
-            margin: 20px 0;
-            display: block;
-        }
+        .main-content { max-width: 1000px; margin: 40px auto; padding: 20px; }
+        
+        .card-box { background: #1a1a1a; padding: 25px; border-radius: 20px; border-right: 5px solid var(--gold); margin-bottom: 30px; transition: 0.4s; }
+        .card-box:hover { transform: scale(1.02); box-shadow: 0 0 25px var(--shadow-purple); }
 
-        .container {
-            width: 90%;
-            max-width: 800px;
-            background: rgba(20, 20, 20, 0.9);
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-            margin-bottom: 50px;
-        }
+        /* عداد التسبيح */
+        .tasbih-box { text-align: center; background: linear-gradient(45deg, #111, #222); padding: 30px; border-radius: 20px; border: 2px solid var(--gold); }
+        #counter { font-size: 4rem; color: var(--gold); display: block; margin: 10px 0; }
+        .btn-tasbih { background: var(--gold); border: none; padding: 15px 40px; border-radius: 50px; font-weight: bold; cursor: pointer; font-size: 1.2rem; }
 
-        h1 { color: var(--primary-purple); font-size: 2.5rem; text-shadow: 0 0 10px var(--primary-purple); margin: 10px 0; }
-        h2 { color: var(--primary-purple); border-bottom: 1px solid var(--primary-purple); padding-bottom: 10px; display: flex; align-items: center; gap: 10px; }
-
-        .section-box {
-            text-align: right;
-            margin: 20px 0;
-            line-height: 1.8;
-        }
-
-        .buttons-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 15px;
-            width: 100%;
-            margin-top: 30px;
-        }
-
-        .btn {
-            padding: 15px;
-            text-align: center;
-            background: var(--primary-purple);
-            color: white;
-            text-decoration: none;
-            border-radius: 10px;
-            font-weight: bold;
-            transition: 0.3s;
-            box-shadow: 0 4px 15px rgba(160, 32, 240, 0.3);
-        }
-
-        .btn:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 25px rgba(160, 32, 240, 0.5);
-        }
-
-        .footer { font-size: 0.8rem; color: #555; margin-bottom: 20px; }
+        .footer { text-align: center; padding: 50px; color: #666; font-size: 0.9rem; }
+        .btn-link { display: inline-block; margin-top: 15px; color: #fff; background: var(--shadow-purple); padding: 10px 20px; border-radius: 10px; text-decoration: none; }
     </style>
 </head>
 <body>
+    <div class="stars"></div>
+    <header>
+        <img src="https://i.pinimg.com/736x/8e/0b/40/8e0b404d0f62243d63792c3a504a4347.jpg" class="logo" alt="Logo">
+        <h1 style="color: var(--gold); font-size: 2.5rem;">⚜️ منصة سيد الظلال الدعوية</h1>
+        <p>مرحباً بك يا عبدالله (سونغ) في مشروعك الكبير</p>
+    </header>
 
-    <div class="header">
-        <h1>⚔️ 𝑩𝑶𝑻 𝑺𝒐𝒏𝒈 𝑱𝒊𝒏 𝑾𝒐𝒐</h1>
-        <p>مرحباً بك في مقر قيادة جيش الظلال الرسمي</p>
+    <div class="nav-bar">
+        <a href="#about">عن المنصة</a>
+        <a href="#services">الخدمات</a>
+        <a href="#tasbih">عداد التسبيح</a>
+        <a href="#contact">تواصل</a>
     </div>
 
-    <img src="https://i.pinimg.com/736x/8e/0b/40/8e0b404d0f62243d63792c3a504a4347.jpg" alt="Sung Jin Woo" class="hero-img">
+    <div class="main-content">
+        <div id="about" class="card-box">
+            <h2 style="color: var(--gold);">📜 رؤيتنا</h2>
+            <p>نسعى لتوظيف التكنولوجيا والذكاء الاصطناعي (بوتات الواتساب) في خدمة الدين ونشر الأذكار والفوائد الدينية لكل بيت مجاناً وبسهولة تامة.</p>
+        </div>
 
-    <div class="container">
-        <section class="section-box">
-            <h2>📜 نبذة عن البوت</h2>
-            <p>هذا البوت مستوحى من هيبة "سونغ جين وو"، مصمم ليخدمك في واتساب بمميزات فريدة وسرعة خارقة. البوت متاح <b>مجاناً بالكامل</b> للجميع دون أي رسوم.</p>
-        </section>
+        <div id="services" class="card-box">
+            <h2 style="color: var(--gold);">🛠️ خدماتنا الذكية</h2>
+            <p>نقدم لك بوت <b>𝑩𝑶𝑻 𝑺𝒐𝒏𝒈 𝑱𝒊𝒏 𝑾𝒐𝒐</b> الذي يوفر الأذكار، تنبيهات الصلاة، والردود الآلية على مدار الساعة.</p>
+            <a href="https://wa.me/201055719273" class="btn-link">تواصل مع البوت</a>
+            <a href="https://whatsapp.com/channel/0029VbC88QMKQuJDtUAiNm47" class="btn-link" style="background: #25d366;">قناة الواتساب</a>
+        </div>
 
-        <section class="section-box">
-            <h2>🛠️ كيف يمكنك استخدامه؟</h2>
-            <ul style="list-style-type: none; padding-right: 0;">
-                <li>📍 أضف رقم البوت إلى جهات اتصالك.</li>
-                <li>💬 أرسل كلمة <b>.start</b> لتفعيل القائمة الرئيسية.</li>
-                <li>⚡ اتبع التعليمات التي يرسلها البوت لتنفيذ المهام.</li>
-            </ul>
-        </section>
-
-        <section class="section-box">
-            <h2>⚖️ القوانين</h2>
-            <p>1. يمنع السبام (إرسال رسائل كثيرة متتالية).</p>
-            <p>2. يمنع استخدام البوت في أغراض مسيئة.</p>
-            <p>3. البوت للمتعة والفائدة، يرجى استخدامه بوعي.</p>
-        </section>
-
-        <div class="buttons-grid">
-            <a href="https://wa.me/201055719273" class="btn">🚀 ابدأ المحادثة الآن</a>
-            <a href="https://t.me/your_link" class="btn">👥 انضم لمجموعة الدعم</a>
-            <a href="mailto:contact@example.com" class="btn">📧 تواصل مع المطور</a>
+        <div id="tasbih" class="tasbih-box">
+            <h2 style="color: var(--gold);">📿 عداد التسبيح الإلكتروني</h2>
+            <span id="counter">0</span>
+            <button class="btn-tasbih" onclick="count()">سبّح الآن</button>
+            <button onclick="reset()" style="background:none; border:none; color:#666; cursor:pointer; margin-top:10px; display:block; width:100%;">تصفير العداد</button>
         </div>
     </div>
 
-    <div class="footer">
-        تم التطوير بواسطة سيد الظلال © 2026
-    </div>
+    <footer id="contact">
+        <p>تم التصميم بكل فخر بواسطة عبدالله عطية (سيد الظلال)</p>
+        <p>© 2026 - جميع الحقوق محفوظة لوجه الله تعالى</p>
+    </footer>
 
+    <script>
+        let n = 0;
+        function count() { n++; document.getElementById('counter').innerText = n; }
+        function reset() { n = 0; document.getElementById('counter').innerText = n; }
+    </script>
 </body>
 </html>
