--- a/index.html
+++ b/index.html
@@ -3,80 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بوابة 𝑺𝒐𝒏𝒈 𝑱𝒊𝒏 𝑾𝒐𝒐 المتكاملة</title>
-    <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+    <title>Bot Song Jin Woo</title>
     <style>
-        :root { --gold: #d4af37; --shadow-purple: #8a2be2; --bg: #050505; }
-        body { background: var(--bg); color: #fff; font-family: 'Cairo', sans-serif; margin: 0; overflow-x: hidden; }
-        
-        /* تأثير الخلفية المتحركة */
-        .stars { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background: radial-gradient(circle, #1a0033 0%, #050505 100%); }
+        /* إعدادات الخلفية المتحركة (CSS) */
+        body {
+            margin: 0;
+            padding: 0;
+            /* خلفية متدرجة الألوان تتحرك */
+            background: linear-gradient(45deg, #0a0a0a, #1a0b2e, #001f3f);
+            background-size: 400% 400%;
+            animation: gradientBG 10s ease infinite;
+            color: white;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            text-align: center;
+        }
 
-        header { padding: 40px; text-align: center; border-bottom: 2px solid var(--gold); background: rgba(0,0,0,0.8); }
-        .logo { width: 150px; border-radius: 50%; border: 3px solid var(--gold); box-shadow: 0 0 20px var(--shadow-purple); }
+        /* كود حركة الخلفية */
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
 
-        .nav-bar { display: flex; justify-content: center; gap: 20px; background: #111; padding: 15px; position: sticky; top: 0; z-index: 100; }
-        .nav-bar a { color: var(--gold); text-decoration: none; font-weight: bold; font-size: 1.1rem; }
+        /* إعدادات الشعار وتوهجه */
+        .logo {
+            width: 250px;
+            border-radius: 50%;
+            box-shadow: 0 0 20px #4a00e0, 0 0 40px #8e2de2;
+            margin-bottom: 20px;
+            transition: transform 0.3s; /* تأثير عند مرور الماوس */
+        }
 
-        .main-content { max-width: 1000px; margin: 40px auto; padding: 20px; }
-        
-        .card-box { background: #1a1a1a; padding: 25px; border-radius: 20px; border-right: 5px solid var(--gold); margin-bottom: 30px; transition: 0.4s; }
-        .card-box:hover { transform: scale(1.02); box-shadow: 0 0 25px var(--shadow-purple); }
+        .logo:hover {
+            transform: scale(1.1); /* تكبير الشعار قليلاً */
+        }
 
-        /* عداد التسبيح */
-        .tasbih-box { text-align: center; background: linear-gradient(45deg, #111, #222); padding: 30px; border-radius: 20px; border: 2px solid var(--gold); }
-        #counter { font-size: 4rem; color: var(--gold); display: block; margin: 10px 0; }
-        .btn-tasbih { background: var(--gold); border: none; padding: 15px 40px; border-radius: 50px; font-weight: bold; cursor: pointer; font-size: 1.2rem; }
+        /* إعدادات النصوص */
+        h1 {
+            font-size: 3em;
+            text-shadow: 0 0 10px #00f2fe;
+            margin: 10px 0;
+            letter-spacing: 2px;
+        }
 
-        .footer { text-align: center; padding: 50px; color: #666; font-size: 0.9rem; }
-        .btn-link { display: inline-block; margin-top: 15px; color: #fff; background: var(--shadow-purple); padding: 10px 20px; border-radius: 10px; text-decoration: none; }
+        .subtitle {
+            font-size: 1.2em;
+            color: #b3b3b3;
+        }
+
+        /* زر التفاعل */
+        .btn {
+            margin-top: 30px;
+            padding: 15px 40px;
+            font-size: 1.5em;
+            color: white;
+            background: transparent;
+            border: 2px solid #8e2de2;
+            border-radius: 8px;
+            cursor: pointer;
+            box-shadow: 0 0 15px #8e2de2;
+            transition: 0.3s;
+        }
+
+        .btn:hover {
+            background: #8e2de2;
+            box-shadow: 0 0 30px #8e2de2;
+        }
     </style>
 </head>
 <body>
-    <div class="stars"></div>
-    <header>
-        <img src="https://i.pinimg.com/736x/8e/0b/40/8e0b404d0f62243d63792c3a504a4347.jpg" class="logo" alt="Logo">
-        <h1 style="color: var(--gold); font-size: 2.5rem;">⚜️ منصة سيد الظلال الدعوية</h1>
-        <p>مرحباً بك يا عبدالله (سونغ) في مشروعك الكبير</p>
-    </header>
 
-    <div class="nav-bar">
-        <a href="#about">عن المنصة</a>
-        <a href="#services">الخدمات</a>
-        <a href="#tasbih">عداد التسبيح</a>
-        <a href="#contact">تواصل</a>
-    </div>
+    <img src="71741.png" alt="شعار سونغ جين وو" class="logo" id="botLogo">
 
-    <div class="main-content">
-        <div id="about" class="card-box">
-            <h2 style="color: var(--gold);">📜 رؤيتنا</h2>
-            <p>نسعى لتوظيف التكنولوجيا والذكاء الاصطناعي (بوتات الواتساب) في خدمة الدين ونشر الأذكار والفوائد الدينية لكل بيت مجاناً وبسهولة تامة.</p>
-        </div>
+    <h1>BOT SONG JIN WOO</h1>
+    <p class="subtitle">نظام الترقية الخاص بحديقة الظل يعمل الآن...</p>
 
-        <div id="services" class="card-box">
-            <h2 style="color: var(--gold);">🛠️ خدماتنا الذكية</h2>
-            <p>نقدم لك بوت <b>𝑩𝑶𝑻 𝑺𝒐𝒏𝒈 𝑱𝒊𝒏 𝑾𝒐𝒐</b> الذي يوفر الأذكار، تنبيهات الصلاة، والردود الآلية على مدار الساعة.</p>
-            <a href="https://wa.me/201055719273" class="btn-link">تواصل مع البوت</a>
-            <a href="https://whatsapp.com/channel/0029VbC88QMKQuJDtUAiNm47" class="btn-link" style="background: #25d366;">قناة الواتساب</a>
-        </div>
-
-        <div id="tasbih" class="tasbih-box">
-            <h2 style="color: var(--gold);">📿 عداد التسبيح الإلكتروني</h2>
-            <span id="counter">0</span>
-            <button class="btn-tasbih" onclick="count()">سبّح الآن</button>
-            <button onclick="reset()" style="background:none; border:none; color:#666; cursor:pointer; margin-top:10px; display:block; width:100%;">تصفير العداد</button>
-        </div>
-    </div>
-
-    <footer id="contact">
-        <p>تم التصميم بكل فخر بواسطة عبدالله عطية (سيد الظلال)</p>
-        <p>© 2026 - جميع الحقوق محفوظة لوجه الله تعالى</p>
-    </footer>
+    <button class="btn" onclick="arise()">إنهض (Arise)</button>
 
     <script>
-        let n = 0;
-        function count() { n++; document.getElementById('counter').innerText = n; }
-        function reset() { n = 0; document.getElementById('counter').innerText = n; }
+        function arise() {
+            alert("تم تفعيل طاقة الظل! مرحباً بك يا بطل.");
+            // تغيير لون إضاءة الشعار عند الضغط
+            document.getElementById('botLogo').style.boxShadow = "0 0 60px #00f2fe";
+        }
     </script>
+
 </body>
 </html>
